# BE_ShoeShop

./: .gitignore  Dockerfile  README.md  create_db.py  docker-compose.yml  fix_db.py  pyproject.toml  seed_data.py
alembic/: env.py
alembic/versions/: 19e440e5566e_add_shipping_method_to_order.py  3118f1537aa6_initial_schema.py  68b00dd935bc_add_applied_voucher_code_to_cart.py  7a9bd1446edb_add_user_cart_relationship.py  9430dcff9534_.py  9d685357fb49_add_max_usage_per_customer_to_voucher.py  fecd0849e7ce_add_is_active_to_cart_item.py
app/: config.py  main.py
app/core/: database.py  dependencies.py  enums.py  exceptions.py  middleware.py  security.py
app/models/: __init__.py  audit_log.py  base.py  brand.py  cart.py  cart_item.py  category.py  customer.py  order.py  order_detail.py  order_status_log.py  product.py  product_color.py  product_image.py  product_sku.py  return_item.py  return_request.py  stock_log.py  user.py  voucher.py  voucher_usage.py
app/repositories/: audit_repository.py  base_repository.py  brand_repository.py  cart_repository.py  category_repository.py  customer_repository.py  order_repository.py  product_repository.py  return_repository.py  stock_repository.py  user_repository.py  voucher_repository.py
app/schemas/: audit.py  auth.py  base.py  brand.py  cart.py  category.py  customer.py  order.py  product.py  return_request.py  stock.py  user.py  voucher.py
docs/: api_design.md  backend_design.md  business_design.md  database_design.md  fe_be_contract.md  frontend_map.md  implementation_plan copy.md  implementation_plan.md
(+25 files in other folders)
