[tool.poetry]
name = "be-shoeshop"
version = "1.0.0"
description = "ShoeShop Backend API"
authors = ["ShoeShop Team <team@shoeshop.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
gunicorn = "^23.0.0"
sqlalchemy = "^2.0.0"
aioodbc = "^0.5.0"
pyodbc = "^5.0.0"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
python-multipart = "^0.0.20"
pillow = "^11.0.0"
fastapi-mail = "^1.4.1"
loguru = "^0.7.0"
slowapi = "^0.1.9"
bcrypt = "<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
black = "^24.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
